--- a/_config.yml
+++ b/_config.yml
@@ -63,9 +63,9 @@ f# //booter-text: Copyright (c) 2019 lemon
 
 # Gitalk
 gitalk:
- # clientID: bd65d5c0df878155b7fa
- # clientSecret: d0220762c05c2d6b6f6152a0f0e4b6b090de9729
- # repo: lemonchann.github.io
+ # clientID: 9f132783bcf6e119f370
+ # clientSecret: ad54b8846235ba17a4a247f987cab4b44220c269
+ # repo: biaowu82.github.io
   # owner: lemonchann
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
